--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 
 		<dependency>
 			<groupId>com.github.tomakehurst</groupId>
-			<artifactId>wiremock-jre8-standalone</artifactId>
+			<artifactId>wiremock-jre8</artifactId>
 			<version>2.25.1</version>
 		</dependency>
 
